--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
 
 		<dependency>
 			<groupId>cc.protea.foundation</groupId>
-			<artifactId>foundation</artifactId>
+			<artifactId>utility</artifactId>
 			<version>[0.0.1-SNAPSHOT,)</version>
 		</dependency>
 
