--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,14 @@
 
 	<dependencies>
 
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>cc.protea.foundation</groupId>
 			<artifactId>utility</artifactId>
