Allow MySQL for user storage

--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 		<dependency>
 			<groupId>cc.protea.platform</groupId>
 			<artifactId>platform</artifactId>
-			<version>[0.0.1-SNAPSHOT,)</version>
+			<version>[0.2,)</version>
 		</dependency>
 
 	</dependencies>
