fixing path issues

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "React Webpack Babel Starter Kit",
   "main": "''",
   "scripts": {
-    "prebuild": "npm install",
-    "build": "NODE_ENV=production webpack -p --config webpack.production.config.js --progress --profile --colors",
+    "_mvn_prebuild": "npm install",
+    "maven_build": "cd webapp; NODE_ENV=production webpack -p --config webpack.production.config.js --progress --profile --colors; cd ..",
     "dev": "webpack-dev-server --progress --profile --colors --hot"
   },
   "repository": {
