--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "webpack-dev-server --progress --profile --colors --hot"
   },
   "dependencies": {
+    "webpack": "1.13.0",
     "bootstrap": "3.3.5",
     "json-loader": "^0.5.4",
     "json5-loader": "^0.6.0",
