--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "main": "''",
   "scripts": {
-    "_mvn_prebuild": "npm install",
+    "clean": "rm -rf node_modules; rm webapp/public",
+    "production_install": "NODE_ENV=production npm install",
     "maven_build": "cd webapp; NODE_ENV=production NODE_PATH=../node_modules webpack -p --config webpack.production.config.js --progress --profile --colors; cd ..",
     "dev": "webpack-dev-server --progress --profile --colors --hot"
   },
   "dependencies": {
     "webpack": "1.13.0",
+    "babel-core": "6.7.7",
+    "babel-loader": "6.2.4",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.5.0",
+    "file-loader": "0.8.5",
+    "css-loader": "0.23.1",
+    "style-loader": "0.13.1",
+    "url-loader": "0.5.7",
     "bootstrap": "3.3.5",
     "json-loader": "^0.5.4",
     "json5-loader": "^0.6.0",
@@ -16,16 +25,7 @@
     "react-dom": "15.0.1"
   },
   "devDependencies": {
-    "babel-core": "6.7.7",
-    "babel-loader": "6.2.4",
-    "babel-preset-es2015": "6.6.0",
-    "babel-preset-react": "6.5.0",
-    "css-loader": "0.23.1",
-    "file-loader": "0.8.5",
     "react-hot-loader": "1.3.0",
-    "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
-    "webpack": "1.13.0",
     "webpack-dev-server": "1.14.1"
   }
 }
