--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jsx-loader": "^0.13.2",
     "node-libs-browser": "1.0.0",
     "react": "15.0.1",
-    "react-dom": "15.0.1"
+    "react-dom": "15.0.1",
+    "strip-loader": "0.1.2"
   },
   "devDependencies": {
     "react-hot-loader": "1.3.0",
